# snowdesk-data-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CODING_STANDARDS.md  DESIGN.md  README.md  build.sh  build_headless.sh  db.sqlite3.1  lighthouserc.json  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  site-structure.md  tox.ini
.claude/: README.md  launch.json  settings.json
.claude/agents/: developer.md  documenter.md  implementer.md  qa.md  reviewer.md  ruff-lint-format.md  scoper.md  security-auditor.md
.claude/audits/: eaws-fixture-audit.md
.claude/commands/: snow-audit.md  snow-issue.md  snow-pr.md
.github/workflows/: ci.yml  lighthouse.yml  security-audit.yml
bulletins/: admin.py  apps.py  dev_urls.py  dev_urls_euregio.py  dev_urls_openmeteo.py  dev_views.py  models.py  schema.py
bulletins/fixtures/: bulletins.json  region_bulletins.json
bulletins/local_mirrors/: euregio_archive.ndjson
bulletins/migrations/: 0001_initial.py  0002_add_weather_snapshot.py  0003_seed_weather_header_flag.py  0004_remove_weather_header_flag.py  0005_recompute_day_ratings_v5.py  0006_repoint_region_fks.py  0007_rename_region_fk_targets.py
bulletins/services/: __init__.py  data_fetcher.py  day_rating.py  euregio_fetcher.py  meteofrance_fetcher.py  meteofrance_translator.py  openmeteo_archive.py  render_model.py  slf_archive.py  weather_display.py  weather_fetcher.py
config/: __init__.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  perf.py  production.py
core/: apps.py  decorators.py  middleware.py  models.py  utils.py
design/docs/: tokens.md
design/figma/: tokens.json
design/tokens/: breakpoints.json  colour.eaws.json  colour.semantic.dark.json  colour.semantic.json  radius.json  typography.json
docs/: async-operations.md  bulletin-guide.md  calendar.md  day_character_rules_spec.md  eaws_regions_ch.csv  eaws_regions_euregio.csv  feature-flags.md  i18n.md  lighthouse.md  linear-workflow.md  management-commands.md  map-and-api.md  meteofrance-mapping.md  nav_implementation_spec.md  offline-map.md  query-counts.md  render-model.md  slf-api-history.md  subscriptions.md  testing-scenarios.md  useful-repos.md  user-journeys.md  weather-header.md
docs/code-reviews/: 2026-05-05.md  2026-05-13.md  README.md
docs/qa/: render_model_qa.md
perf/: query_counts.txt
pipeline/: __init__.py  admin.py  apps.py  decorators.py  dev_urls.py  dev_views.py  middleware.py  models.py  schema.py  urls.py  utils.py  views.py
pipeline/fixtures/: bulletins.json  eaws_major_regions.json  eaws_sub_regions.json  region_bulletins.json  regions.json  resorts.json
pipeline/management/: __init__.py
pipeline/migrations/: 0001_initial.py  0002_add_resort_model.py  0003_region_boundary_region_centre.py  0004_bulletin_render_model.py  0005_pipelinerun_records_failed.py  0006_regiondayrating.py  0007_backfill_regiondayrating.py  0008_rederive_regiondayrating_traits.py  0009_retarget_regiondayrating_issue_day.py  0010_single_bulletin_day_rating.py  0011_eaws_region_hierarchy.py  0012_backfill_subregion.py  0013_require_subregion.py  0014_resort_geocoding.py  0015_region_neighbours.py  0016_backfill_region_neighbours.py  0017_remove_bulletin_models.py  0018_seed_edit_map_flag.py  0019_close_region_boundary_rings.py  0020_remove_reference_models.py
pipeline/services/: __init__.py  data_fetcher.py  day_rating.py  render_model.py  slf_archive.py
public/: _component_fixtures.py  api.py  api_urls.py  apps.py  checks.py  debug_views.py  design_tokens.py  field_guidance.yaml  guidance.py  season_calendar.py  urls.py  views.py
public/templatetags/: aspect_rose_spec.md  card_tags.py  component_library_tags.py  hazard_icons.py  snowdesk_html.py  snowdesk_time.py  source_attribution.py  source_pill.py
reference_data/: CAAML_SCHEMA.md
reference_data/eaws/: CH_micro-regions.geojson  FR_micro-regions.geojson  IT-23_micro-regions.geojson.json
reference_data/slf/: CH_micro-regions.csv
regions/: __init__.py  admin.py  apps.py  fixture_utils.py  models.py  names.py
regions/fixtures/: eaws.json  eaws_CH.json  eaws_ch.json  eaws_euregio.json  eaws_major_regions.json  eaws_sub_regions.json  france.json  regions.json  resorts.json
regions/migrations/: 0001_initial.py  0002_rename_models.py  0002_seed_edit_map_flag.py  0003_alter_majorregion_prefix_alter_microregion_subregion_and_more.py  0003_microregionneighbour_alter_microregion_neighbours.py  0003_update_microregion_subregion_help_text.py  0003_widen_region_prefixes.py  0004_alter_subregion_prefix_max_length_12.py  0004_widen_prefix_fields.py  0005_update_neighbours_helptext.py
sample_data/: EUREGIO_en_CAAMLv6.json  openapi.json  sample_legacy_no_publication_time.json  sample_no_aggregation_day.json  sample_subdivision_3plus_day.json
sample_data/eaws/: fr_names.json
sample_data/test_fixtures/: README.md
scripts/: build_regions_fixture.py  fetch_euregio_archive.py  validate_regions_csv.py
src/css/: main.css
static/: manifest.webmanifest  offline.html
static/css/: main.css  map.css  public.css  random_bulletins.css  season_bulletins.css
static/js/: main.js  map.js  map_edit_resorts.js  offline.js  passkey.js  pwa_install.js  sw.js  sw_register.js
subscriptions/: aaguids.py  admin.py  apps.py  backends.py  context_processors.py  forms.py  models.py  urls.py  views.py  views_passkey.py
subscriptions/migrations/: 0001_initial.py  0002_create_cache_table.py  0002_subscriber_status_confirmed_at.py  0003_add_subscription.py  0003_create_cache_table.py  0004_alter_subscription_region.py  0005_rename_region_fk_target.py  0006_passkey_credential.py  0007_alter_passkeycredential_aaguid_and_more.py
subscriptions/services/: email.py  passkey.py  token.py
templates/includes/: _no_data_supplied.html  bulletin_header.html  bulletin_masthead.html  bulletin_masthead_v3.html  bulletin_masthead_v4.html  bulletin_weather_header.html  country_flags_sprite.html  day_character_callout.html  day_windows.html  (+2 more)
tests/: conftest.py  factories.py  test_csp.py
(+282 files in other folders)
