[tool.poetry]
name = "snowdesk-data-pipeline"
version = "0.1.0"
description = "Django data pipeline with HTMX frontend"
authors = ["Hugo Rodger-Brown"]
readme = "CLAUDE.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2"
django-htmx = "^1.21.0"
python-decouple = "^3.8"
requests = "^2.32.3"
psycopg = {extras = ["binary"], version = "^3.2.4"}

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.10"
isort = "^5.13.2"
pre-commit = "^4.2.0"
django-stubs = "^6.0.2"
pytest = "^9.0.3"
pytest-django = "^4.12.0"
factory-boy = "^3.3.3"
types-requests = "^2.33.0.20260408"
pytest-cov = "^7.1.0"
tox = "^4.52.1"
tox-gh-actions = "^3.5.0"
mypy = "^1.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
known_django = ["django", "django_htmx"]
known_first_party = ["config", "pipeline", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["decouple", "decouple.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=pipeline --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["pipeline"]
omit = ["pipeline/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by black
# Note: "I" (isort) is excluded — isort is run separately with a custom
# DJANGO section that ruff's isort implementation does not support.
