[tool.poetry]
name = "snowdesk-data-pipeline"
version = "0.1.0"
description = "Django data pipeline with HTMX frontend"
authors = ["Hugo Rodger-Brown"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.2"
django-htmx = "^1.21.0"
python-decouple = "^3.8"
requests = "^2.32.3"
psycopg = {extras = ["binary"], version = "^3.2.4"}
dj-database-url = "^3.1.2"
whitenoise = "^6.12.0"
gunicorn = "^25.3.0"
pyyaml = "^6.0.3"
bleach = "^6.3.0"
django-ratelimit = "^4.1.0"
django-csp-plus = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pre-commit = "^4.2.0"
django-stubs = "^6.0.2"
pytest = "^9.0.3"
pytest-django = "^4.12.0"
factory-boy = "^3.3.3"
types-requests = "^2.33.0.20260408"
pytest-cov = "^7.1.0"
tox = "^4.52.1"
tox-gh-actions = "^3.5.0"
mypy = "^1.20.0"
djangofmt = "^0.2.6"
freezegun = "^1.5.5"
types-bleach = "^6.3.0.20260408"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = false
strict_optional = true
ignore_missing_imports = true
follow_imports = "silent"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["decouple", "decouple.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.settings.*"]
ignore_errors = true

# Tests follow pytest conventions: test methods return None and don't
# need explicit annotations. Keep type checking enabled (so real type
# errors still surface), but allow untyped defs so idiomatic pytest
# functions don't each need a trailing `-> None`.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.django-stubs]
django_settings_module = "config.settings.development"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=pipeline --cov=public --cov=subscriptions"
# pytest-django defaults to DEBUG=False at test time, which silently
# drops URL-conf entries gated on ``if settings.DEBUG:`` (the dev-only
# SLF mirror in config/urls.py, the scrubber-perf debug page in
# public/urls.py). ``keep`` honours the value from the settings module
# (DEBUG=True under config.settings.development) so those routes stay
# registered and their test client GETs resolve.
django_debug_mode = "keep"

[tool.coverage.run]
source = ["pipeline", "public", "subscriptions"]
omit = ["pipeline/migrations/*", "public/migrations/*", "subscriptions/migrations/*", "config/*", "__init__.py"]

[tool.coverage.report]
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "A",   # flake8 builtins
    "C9",  # mccabe
    "D",   # pydocstyle
    "E",   # pycodestyle (errors)
    "F",   # Pyflakes
    "I",   # isort
    "S",   # flake8-bandit
    "T2",  # flake8-print
    "W",   # pycodestyle (warnings)
]
ignore = [
    "D203",  # 1 blank line required before class docstring
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
    "D403",  # First word of the first line should be capitalized
    "D404",  # First word of the docstring should not be "This"
    "D405",  # Section name should be properly capitalized
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
    "D410",  # Missing blank line after section
    "D411",  # Missing blank line before section
    "D412",  # No blank lines allowed between a section header and its content
    "D416",  # Section name should end with a colon
    "D417",  # Missing argument description in the docstring
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"*tests/*" = [
    "D1",    # Missing docstrings
    "D205",  # 1 blank line required between summary line and description
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "D415",  # First line should end with a period, question mark, or exclamation point
    "E501",  # Line too long
    "E731",  # Do not assign a lambda expression, use a def
    "S101",  # Use of assert detected
    "S105",  # Possible hardcoded password
    "S106",  # Possible hardcoded password
    "S113",  # Probable use of requests call with timeout set to {value}
]
"*/migrations/*" = [
    "D1",    # Missing docstrings
    "E501",  # Line too long
]
"*/settings.py" = [
    "F403",  # from {name} import * used; unable to detect undefined names
    "F405",  # {name} may be undefined, or defined from star imports
]
"*/settings/*" = [
    "F403",  # from {name} import * used; unable to detect undefined names
    "F405",  # {name} may be undefined, or defined from star imports
]
